--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.jpa.show-sql=true
 
 jasypt.encryptor.password=MY_PASS
 
+#logging.file=D:/spring_app_log_file.log
+
 #spring.jpa.hibernate.ddl-auto=create-drop
