--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -25,6 +25,7 @@
     "@types/jspdf": "^1.1.31",
     "angular-animate": "^1.6.9",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
