Created schema.sql and data.sql.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/reciperepository
 spring.datasource.username=ENC(Dx0k3VicsGn38UrbXKg+5A==)
 spring.datasource.password=ENC(rM+/lUH2WZ5O8J4hHrmKMFHoxjqaaOuy)
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.initialization-mode=always
 
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 jasypt.encryptor.password=MY_PASS
 
-#logging.file=D:/spring_app_log_file.log
-
-#spring.jpa.hibernate.ddl-auto=create-drop
+#logging.file=../../../target/spring_app_log_file.log
