--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "glyphicons": "^0.2.0",
     "jquery": "^3.3.1",
     "jspdf": "^1.3.5",
     "node-sass": "^4.7.2",
