--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.reciperegistry</groupId>
     <artifactId>recipe-registry</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <inceptionYear>2018</inceptionYear>
+    <version>1.0</version>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -14,14 +15,41 @@
         <version>2.0.0.RELEASE</version>
     </parent>
 
+    <name>Recipe Registry</name>
+    <inceptionYear>2018</inceptionYear>
     <organization>
         <name>University of Debrecen</name>
+        <url>https://www.inf.unideb.hu/en</url>
     </organization>
+    <description>This application is suitable for managing your favourite recipes.</description>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <dependency.locations.enabled>false</dependency.locations.enabled>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <mainClass>com.reciperegistry.Main</mainClass>
+    </properties>
+
+    <developers>
+        <developer>
+            <name>Szatmári Mihály</name>
+            <email>szatmari.mihaly96@gmail.com</email>
+            <url>https://github.com/misi96</url>
+            <organization>University of Debrecen Faculty of Informatics</organization>
+            <organizationUrl>https://www.inf.unideb.hu/en</organizationUrl>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <timezone>GMT+1</timezone>
+        </developer>
+    </developers>
 
     <licenses>
         <license>
-            <name>Recipe Registry License, Version 2.0</name>
-            <distribution>repo</distribution>
+            <name>GNU General Public License Version 3.0</name>
+            <url>http://www.gnu.org/licenses/gpl-3.0</url>
         </license>
     </licenses>
 
@@ -106,29 +134,48 @@
         </dependency>
     </dependencies>
 
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-
     <reporting>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
+                <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.0.0</version>
-                <configuration>
-                    <configLocation>checkstyle.xml</configLocation>
-                </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
                 <version>2.5</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.21.0</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.0.0</version>
                 <configuration>
-                    <linkJavadoc>true</linkJavadoc>
-                    <javadocDir>/target/site/apidocs</javadocDir>
+                    <configLocation>${basedir}/src/main/resources/checkstyle.xml</configLocation>
+                    <encoding>UTF-8</encoding>
+                    <consoleOutput>true</consoleOutput>
                 </configuration>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>checkstyle</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.1</version>
             </plugin>
         </plugins>
     </reporting>
@@ -136,23 +183,40 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>
-                    <executable>ng</executable>
-                    <workingDirectory>src/main/ui</workingDirectory>
-                    <arguments>
-                        <argument>build</argument>
-                    </arguments>
+                    <mainClass>${mainClass}</mainClass>
+                    <cleanupDaemonThreads>false</cleanupDaemonThreads>
                 </configuration>
             </plugin>
 
@@ -161,9 +225,15 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>1.4.2.RELEASE</version>
                 <configuration>
-                    <mainClass>com.reciperegistry.Main</mainClass>
+                    <mainClass>${mainClass}</mainClass>
                     <layout>ZIP</layout>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.9</version>
             </plugin>
 
             <plugin>
@@ -213,4 +283,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
