--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,13 @@
             <version>3.0.0</version>
             <type>maven-plugin</type>
         </dependency>
+
+        <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>1.8</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <reporting>
