--- a/pom.xml
+++ b/pom.xml
@@ -221,9 +221,22 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <mainClass>${mainClass}</mainClass>
                     <cleanupDaemonThreads>false</cleanupDaemonThreads>
+                    <executable>ng</executable>
+                    <workingDirectory>src/main/ui</workingDirectory>
+                    <arguments>
+                        <argument>build</argument>
+                    </arguments>
                 </configuration>
             </plugin>
 
